contrast violation fixes

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -172,6 +172,10 @@ footer {
     padding-bottom: 1rem;
 }
 
+footer p {
+    font-weight: bolder;
+}
+
 /* contact page styling */
 
 .company-info h1, h2 {
@@ -218,7 +222,7 @@ fieldset {
 
 legend {
     padding: 0.2rem;
-    color: forestgreen;
+    color: var(--primary-color);
     font-size: 1.3rem;
 }
 
